# nutri-ai

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt
src/: app.py  env.py  graph_builder.py
src/agents/: nutritionist.py
src/chatbot/: telegram.py
src/llms/: main.py  tool.py
src/prompts/: extract_user_info.py  nutritionist_agent.py
src/tools/: calorie_calculator.py  food_image_analyzer.py  generate_meal_plan_pdf.py  user_info_extractor.py
src/utils/: state.py  tools.py
